# discord-server-test

./: .gitignore  .gitmodules  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
bot-server/: .env  .env.example  README.md  cspell-dictionary.txt  package.json  pnpm-lock.yaml
contract/: README.md  cspell-dictionary.txt  (+3 more)
contribution-analyzer/: .gitignore  README.md  analyze.py  execute.py  memo.md  pyproject.toml
contribution-analyzer/app/: analyzer.py  contribution_stats.py  issue_classifier.py  issue_classifier_prompt.py  issue_detector.py  issue_detector_prompt.py  llm.py  support_detector.py  support_detector_prompt.py  support_score_calculator.py
contribution-analyzer/doc/: agent.md  データ構造.md
contribution-analyzer/message-data/: sort.py
contribution-analyzer/report/cost/: cost_20230620_020503.csv  cost_20230620_083328.csv
contribution-analyzer/report/issue_detector/: README.md  condition.csv  report_20230618_092651.txt
contribution-analyzer/report/support_score/: README.md  condition.csv  report_20230620_083635.txt
contribution-analyzer/result/: contribution_score_weight_001.json  ranking_001.json  ranking_002.json  ranking_20230620_020503_556458.json  ranking_20230620_083328_320130.json  ranking_metadata_001.json  user_100_001.json  user_200_001.json  user_300_001.json  user_carlito_001.json  user_hiroshi_001.json  user_yuki_001.json
contribution-analyzer/result/old/: ranking_001.json  ranking_003.json
contribution-analyzer/scripts/: evaluate_issue_classifier.py  evaluate_support_score.py  execute_issue_classifier.py  sort.py
(+68 files in other folders)
