[tool.poetry]
name = "contribution-analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "3.11.3"
openai = "^0.27.8"
langchain = "^0.0.202"
numpy = "^1.24.3"
pandas = "^2.0.2"
python-dotenv = "^1.0.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"

[virtualenvs]
in-project = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.3.0"

[tool.black]
line-length = 119

[tool.flake8]
extend-ignore = "E203,E501"
max-line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
